# HiveRecon

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DOCKER.md  Dockerfile  ISSUES.md  LEGAL.md  LICENSE  Makefile  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  gui.py  hiverecon-gui.sh  hiverecon.desktop  hiverecon.sh  install-systemd-service.sh  install-tools.sh  launch-server.sh  pyproject.toml  requirements.txt  setup-arch.sh  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260402_000001_convert_scans_id_to_uuid.py
app/: main.py
app/ai/: prompts.py
app/api/v1/: reports.py  ws.py
app/core/: event_bus.py
app/mcp/: server.py
config/: .env.example  config.yaml
dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json
dashboard/src/: App.js  App.jsx  api.js
dashboard/src/components/: Sidebar.jsx
dashboard/src/pages/: Dashboard.js  Dashboard.jsx  Findings.jsx  LegalDisclaimer.jsx  NewScan.jsx  ScanMonitor.jsx  ScopeConfig.jsx  Settings.js  Settings.jsx  Welcome.jsx
dashboard_old/: package.json
dashboard_old/src/: App.css  api.js
dashboard_old/src/pages/: Findings.js  Scans.js
deploy/: hiverecon-server.service
docs/: CONTRIBUTING.md  README.md
frontend/src/components/: ScanProgress.tsx
frontend/src/hooks/: useScanSocket.ts
hiverecon/: __init__.py  __main__.py  cli.py  config.py  database.py
hiverecon/agents/: __init__.py  recon_agents.py
hiverecon/api/: __init__.py  results.py  server.py
hiverecon/api/v1/: __init__.py
hiverecon/core/: __init__.py  audit.py  correlation.py  event_bus.py  hive_mind.py  parsers.py  rate_limiter.py
hiverecon/integrations/: __init__.py  platforms.py
hiverecon/models/: __init__.py  scan_result.py
scripts/: test_migration.sh
tests/: __init__.py  test_correlation.py  test_database.py  test_parsers.py  test_pipeline.py  test_tools_execution.py
